--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed" />
         <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
         <link href="~/fonts/fonts.css" rel="stylesheet">
-        <!--<link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
+        <link href="~/stylesheets/pace.preload.css" rel="stylesheet">
         <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
@@ -153,7 +153,7 @@
         <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
         <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-        <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script><!-- see if needed-->
+        <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>
 
         <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
