--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -33,6 +33,24 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
+                    <img alt="New Work - Pump" class="img-responsive" src="~/images/newwork/pump.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" title="Pump" href="~/images/newwork/pump.jpg">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">New Work</h3>
+                            <p class="white"><span class="black-bg">Pump</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="New Work" class="img-responsive" src="~/images/resinballs/resinballs-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" title="Resin Balls" href="~/Resin-Balls">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Resin Balls</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
                     <img alt="New Work" class="img-responsive" src="~/images/scribbles/scrib-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" title="Yellow and Blue" href="~/images/scribbles/scrib-02.jpg">
                         <div class="works-item-inner valign">
@@ -41,6 +59,30 @@
                         </div>
                     </a>
                 </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="piercing pieces" class="img-responsive" src="" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Bump">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Bump</span></p>
+                        </div>
+                    </a>
+                </div>
+
+
+
+                <!-----sample-->
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Collaborations</h3>
+                            <p class="white"><span class="black-bg">The Motherload Project</span></p>
+                        </div>
+                    </a>
+                </div>
+
+
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
