--- a/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
+++ b/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
@@ -12,7 +12,7 @@
                             <div class="showcase-single-item-inner text-left">
                                 <p class="font5"><span class="color-bg black ">Resin Balls</span></p>
                                 <h2 class="black add-top-quarter"><span>Resin Balls</span></h2>
-                                <h5 class="font3 black">2014</h5>
+                                <h5 class="font3 black">2005, 2010</h5>
                                 <h4 class="font5 dark">Resin Balls</h4>
                             </div>
                         </div>
@@ -30,25 +30,28 @@
 
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                        <img alt="Natalie Macellaio - B.S. 1.236 Silver, Resin" title="B.S. 1.236 Silver, Resin" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-01.jpg" />
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
+                        <img alt="Natalie Macellaio - B.S. 1.236l detail" title="B.S. 1.236 detail" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-02.jpg" />
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
+                        <img alt="Natalie Macellaio - B.S. 1.236 full" title="B.S. 1.236 full" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-03.jpg" />
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                        <img alt="Natalie Macellaio - Swarm Revisited - side" title="Swarm Revisited - side" class=" img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-04.jpg" />
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Swarm Revisited - detail" title="Swarm Revisited - detail" class="img-responsive custom-overlay" src="~/images/resinballs/resinballs-06.jpg" />
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Swarm Revisited - full" title="Swarm Revisited - full" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-07.jpg" />
+                    </article>
 
-                    </article>
                 </div>
             </article>
         </div>
